SYS-948: Prevent overlapping query text and search scope on mobile (#9)
stop search query overflow onto next line

--- a/01UCS_LAL-UCLA/css/custom1.css
+++ b/01UCS_LAL-UCLA/css/custom1.css
@@ -376,3 +376,9 @@ prm-full-view .services-index-under #services-index{
 .full-view-section {
   padding-left: 4em;
 }
+/* fix overlapping text in main search bar */
+md-autocomplete-parent-scope {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
